...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--List-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="TodosViewController" title="List" id="BYZ-38-t0r" customClass="TodosViewController" customModule="SimpleTodo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UkM-A2-i3W">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                    <view key="view" contentMode="scaleToFill" id="QrA-cq-mcP">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="40k-Db-FxC">
                                <rect key="frame" x="16" y="92" width="343" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="TodoEditorTitleText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lIv-7n-To0">
                                <rect key="frame" x="16" y="163" width="343" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="TodoEditorDetailsText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ltT-3L-hkt">
                                <rect key="frame" x="16" y="134" width="52" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="0Ii-hC-C2e">
                                <rect key="frame" x="16" y="305" width="343" height="32"/>
                                <segments>
                                    <segment title="High"/>
                                    <segment title="Normal"/>
                                    <segment title="Low"/>
                                </segments>
                            </segmentedControl>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1ab-Rk-xxi">
                                <rect key="frame" x="16" y="234" width="343" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="TodoEditorCategoryText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHO-9t-cod">
                                <rect key="frame" x="16" y="205" width="71" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
