...
    
    func loadData() {
        viewModel.download { (todos, error) in
            self.refreshControl.endRefreshing()
            if let error = error {
                print("Error: \(error)")
                SCLAlertView().showError("Cannot load data", subTitle: error.localizedDescription)
            }
            else { self.tableView.reloadData() }
        }
    }
    
    private func buildEditor(for todo: Todo) -> TodoEditorViewController {
...
        let editor = buildEditor(for: todo).wrapIntoNavigation()
        present(editor, animated: true, completion: nil)
    }
    
    func delete(_ todo: Todo) {
        let alertView = SCLAlertView()
        alertView.addButton("Delete") {
            self.viewModel.delete(todo) { [weak self] todo, error in
                if let error = error {
                    print(error.localizedDescription)
                    SCLAlertView().showError("Cannot remove data", subTitle: error.localizedDescription)
                    return
                }
                self?.syncCollectionItem(todo, modificationType: .delete)
            }
        }
        alertView.showWarning("Confirm", subTitle: "Are you sure you want to delete todo?", closeButtonTitle: "Cancel")
    }
    
    func syncCollectionItem(_ item: Todo, modificationType mode: ModificationType) {
        if let ip = viewModel.syncCollection(with: item, modificationType: mode) {
            switch mode {
            case .insert:
...
