...
    
    required init(with todo: Todo) {
        self.todo = todo
    }
    
    var title: String {
        return todo.id < 0 ? "New" : "#\(todo.id)"
    }
    
    func update(completion: @escaping (Result<Todo>) -> Void) {
        
        todo.update { todo, error in
                if let error = error {
...
